deployment-caev-ausschluss.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: 2018-04-12T21:01:27Z
  generation: 1
  labels:
    run: ausschluss-service
  name: ausschluss-service
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: ausschluss
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: ausschluss
    spec:
      containers:
      - image: ausschluss-service
        imagePullPolicy: IfNotPresent
        name: ausschluss-service
        ports:
         - name: ausschluss
           containerPort: 6379
        volumeMounts:
         - mountPath: /dev/random
           name: urandom
           readOnly: true
         - mountPath: /data
           name: data
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
       - name: urandom
         hostPath:
           path: "/dev/urandom"
       - name: data
         hostPath:
           path: "/tmp/data"
