service-caev-ausschluss.yaml
kind: Service
apiVersion: v1
metadata:
  name: ausschluss-service
spec:
  selector:
    run: ausschluss-pod
  ports:
  - protocol: TCP
    port: 10001
    targetPort: ausschluss
