ingress-caev-ausschluss.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: caev-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: lumpensammler
    servicePort: 8080
  tls:
    - secretName: test.dwpbank.crednet.de
  rules:
  - http:
      paths:
      - path: /ausschluss
        backend:
          serviceName: ausschluss-service
          servicePort: 10001
      - path: /kundeninfo
        backend:
          serviceName: kundeninfo
          servicePort: 10001
